objects/vlocity_ins__InsurableItem__c.object
<CustomObject>
    <description>Represents an item owned by a Lead or Account such as a house, automobile, boat or other property which is an item that may need insurance coverage. Insurable Items are used to remember the details of a client&apos;s property so that future quotes can be generated quickly.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurable Items</relationshipLabel>
        <relationshipName>InsurableItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Insurable Items</relationshipLabel>
        <relationshipName>InsurableItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecDescription__c</fullName>
        <formula>vlocity_ins__SpecProduct2Id__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spec Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecPricingSource__c</fullName>
        <formula>vlocity_ins__SpecProduct2Id__r.vlocity_ins__PricingSource__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spec Product Spec Pricing Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spec Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Insurable Items</relationshipLabel>
        <relationshipName>InsurableItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProductName__c</fullName>
        <formula>vlocity_ins__SpecProduct2Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spec Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProductRecordType__c</fullName>
        <formula>vlocity_ins__SpecProduct2Id__r.vlocity_ins__RecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spec Product Record Type</label>
        <type>Text</type>
    </fields>
    <label>Insurable Item</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__AccountId__c</columns>
        <columns>vlocity_ins__AttributeSelectedValues__c</columns>
        <columns>vlocity_ins__SpecProductName__c</columns>
        <columns>vlocity_ins__SpecDescription__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurable Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>